--- a/Samitex/app/src/main/res/layout/activity_dashboard.xml
+++ b/Samitex/app/src/main/res/layout/activity_dashboard.xml
@@ -1,78 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DashboardActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_layout"
-        android:background="@color/colorPrimary"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/mainlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/menu_icon"
-            android:src="@drawable/ic_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_dashboard"
-            android:text="Dashboard"
-            android:layout_marginStart="40dp"
-            android:layout_marginLeft="40dp"
+            <ImageView
+                android:id="@+id/menu_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_menu" />
+
+            <TextView
+                android:id="@+id/tv_dashboard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginLeft="40dp"
+                android:text="Dashboard"
+                android:textColor="@color/colorWhite"
+                android:textSize="23dp" />
+
+        </android.support.v7.widget.Toolbar>
+
+        <Button
+            android:id="@+id/btn_scan"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_margin="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btn_dashboard"
+            android:text="Scan"
             android:textColor="@color/colorWhite"
-            android:textSize="23dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textSize="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />
 
-    </android.support.v7.widget.Toolbar>
+        <Button
+            android:id="@+id/btn_counter"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/btn_dashboard"
+            android:text="Counter"
+            android:textColor="@color/colorWhite"
+            android:textSize="30dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_foto_file"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_scan" />
 
-    <Button
-        android:id="@+id/btn_scan"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_margin="15dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/btn_dashboard"
-        android:text="Scan"
-        android:textColor="@color/colorWhite"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />
+        <Button
+            android:id="@+id/btn_foto_file"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_margin="15dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_dashboard"
+            android:text="Foto File"
+            android:textColor="@color/colorWhite"
+            android:textSize="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
-    <Button
-        android:id="@+id/btn_counter"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_margin="15dp"
-        android:background="@drawable/btn_dashboard"
-        android:text="Counter"
-        android:textColor="@color/colorWhite"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_foto_file"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_scan" />
-
-    <Button
-        android:id="@+id/btn_foto_file"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_margin="15dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/btn_dashboard"
-        android:text="Foto File"
-        android:textColor="@color/colorWhite"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.DrawerLayout>
