--- a/Samitex/app/src/main/res/layout/activity_scan_data.xml
+++ b/Samitex/app/src/main/res/layout/activity_scan_data.xml
@@ -172,6 +172,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:singleLine="true"
+                    android:focusableInTouchMode="true"
                     app:layout_constraintTop_toBottomOf="@+id/tv_catatan" />
 
                 <TextView
