--- a/Samitex/app/src/main/res/layout/activity_dashboard.xml
+++ b/Samitex/app/src/main/res/layout/activity_dashboard.xml
@@ -42,12 +42,11 @@
             android:id="@+id/btn_scan"
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            android:layout_margin="15dp"
-            android:layout_marginTop="20dp"
+            android:layout_margin="20dp"
             android:background="@drawable/btn_dashboard"
             android:text="Scan"
             android:textColor="@color/colorWhite"
-            android:textSize="30dp"
+            android:textSize="26sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />
@@ -56,26 +55,25 @@
             android:id="@+id/btn_counter"
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            android:layout_margin="15dp"
+            android:layout_margin="20dp"
             android:background="@drawable/btn_dashboard"
             android:text="Counter"
             android:textColor="@color/colorWhite"
-            android:textSize="30dp"
+            android:textSize="26sp"
             app:layout_constraintBottom_toTopOf="@+id/btn_foto_file"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_scan" />
+            app:layout_constraintTop_toBottomOf="@id/btn_scan" />
 
         <Button
             android:id="@+id/btn_foto_file"
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            android:layout_margin="15dp"
-            android:layout_marginBottom="20dp"
+            android:layout_margin="20dp"
             android:background="@drawable/btn_dashboard"
             android:text="Foto File"
             android:textColor="@color/colorWhite"
-            android:textSize="30dp"
+            android:textSize="26sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
