--- a/Samitex/app/src/main/res/layout/activity_scan_data.xml
+++ b/Samitex/app/src/main/res/layout/activity_scan_data.xml
@@ -75,6 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
+                    android:textColor="@color/colorGrey"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_tanggal" />
@@ -83,7 +84,6 @@
                     android:id="@+id/tv_no_mesin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:text="No.Mesin"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
@@ -102,7 +102,6 @@
                     android:id="@+id/tv_shift"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:text="Shift"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
@@ -121,7 +120,6 @@
                     android:id="@+id/tv_operator"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:text="Operator"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
@@ -140,7 +138,6 @@
                     android:id="@+id/tv_jumlah_couter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:text="Jumlah Counter"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
@@ -159,7 +156,6 @@
                     android:id="@+id/tv_catatan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:text="Catatan"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
@@ -179,7 +175,7 @@
                     android:id="@+id/tv_photo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:text="Photo"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
@@ -189,7 +185,7 @@
                     android:id="@+id/img_btn_take_photo"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="70dp"
                     android:layout_marginStart="70dp"
                     android:src="@drawable/baseline_add_a_photo_black_48dp"
@@ -200,7 +196,7 @@
                     android:id="@+id/tampil_foto"
                     android:layout_width="100dp"
                     android:layout_height="120dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="190dp"
                     android:src="@mipmap/ic_launcher"
                     app:layout_constraintStart_toEndOf="@id/img_btn_take_photo"
@@ -214,7 +210,7 @@
                     android:layout_marginTop="100dp"
                     android:layout_marginBottom="80dp"
                     android:background="@drawable/btn_dashboard"
-                    android:text="Simpan"
+                    android:text="Konfirmasi"
                     android:textAllCaps="false"
                     android:textColor="@color/colorWhite"
                     android:textSize="18sp"
