--- a/Samitex/app/src/main/res/layout/activity_dashboard.xml
+++ b/Samitex/app/src/main/res/layout/activity_dashboard.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawer_layout"
     tools:context=".DashboardActivity">
 
     <android.support.constraint.ConstraintLayout
@@ -79,4 +80,11 @@
             app:layout_constraintStart_toStartOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/navigation_menu"
+        android:layout_gravity="start">
+
+    </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
