--- a/Samitex/app/src/main/res/layout/activity_scan_data.xml
+++ b/Samitex/app/src/main/res/layout/activity_scan_data.xml
@@ -108,7 +108,7 @@
                         android:id="@+id/tv_shift"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.45"
+                        android:layout_weight="1.35"
                         android:text="Shift"
                         android:textColor="@color/colorBlack"
                         android:textSize="20sp" />
@@ -124,14 +124,14 @@
 
                     <EditText
                         android:id="@+id/et_no_mesin"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/et_shift"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:singleLine="true"
@@ -173,14 +173,14 @@
 
                     <EditText
                         android:id="@+id/et_operator"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:singleLine="true" />
 
                     <EditText
                         android:id="@+id/et_group"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:singleLine="true"/>
@@ -201,6 +201,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
+                    android:inputType="numberDecimal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_jumlah_couter" />
