--- a/Samitex/app/src/main/res/layout/activity_login.xml
+++ b/Samitex/app/src/main/res/layout/activity_login.xml
@@ -8,17 +8,27 @@
     android:padding="10dp"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:id="@+id/logo_samitex"
+        android:src="@drawable/samitexlogo"
+        android:layout_width="140dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <TextView
         android:id="@+id/tv_samitex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="20dp"
         android:text="PT. Samitex"
         android:textColor="@color/colorWhite"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/logo_samitex"/>
 
     <EditText
         android:id="@+id/et_username"
