--- a/Samitex/app/src/main/res/layout/activity_scan_data.xml
+++ b/Samitex/app/src/main/res/layout/activity_scan_data.xml
@@ -51,8 +51,8 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="15dp">
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
 
                 <TextView
                     android:id="@+id/tv_tanggal"
@@ -135,7 +135,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:singleLine="true"
-                        android:verticalScrollbarPosition="right"/>
+                        android:verticalScrollbarPosition="right" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -149,27 +149,27 @@
                         android:id="@+id/tv_operator"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="Operator"
                         android:textColor="@color/colorBlack"
                         android:textSize="20sp"
-                        android:layout_weight="1"
                         app:layout_constraintTop_toBottomOf="@id/layout_et" />
 
                     <TextView
                         android:id="@+id/tv_Group"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Group"
                         android:layout_weight="1.2"
+                        android:text="Group"
                         android:textColor="@color/colorBlack"
                         android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/layout_et_oprator"
-                    app:layout_constraintTop_toBottomOf="@id/layout_operator"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/layout_operator">
 
                     <EditText
                         android:id="@+id/et_operator"
@@ -183,7 +183,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:singleLine="true"/>
+                        android:singleLine="true" />
 
                 </LinearLayout>
 
@@ -200,8 +200,8 @@
                     android:id="@+id/et_jumlah_counter"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:singleLine="true"
                     android:inputType="numberDecimal"
+                    android:singleLine="true"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_jumlah_couter" />
@@ -261,9 +261,9 @@
                     android:id="@+id/btn_simpan_data"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="100dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/btn_dashboard"
+                    android:layout_marginBottom="80dp"
                     android:text="Konfirmasi"
                     android:textAllCaps="false"
                     android:textColor="@color/colorWhite"
@@ -271,7 +271,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/img_btn_take_photo" />
+                    app:layout_constraintTop_toBottomOf="@id/tampil_foto" />
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
     </android.support.constraint.ConstraintLayout>
