--- a/Samitex/app/src/main/res/values/colors.xml
+++ b/Samitex/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGrey">#616161</color>
+    <color name="colorAbuAbu">#e4e4e4</color>
 </resources>
