--- a/Samitex/app/src/main/res/layout/activity_konfirmasi.xml
+++ b/Samitex/app/src/main/res/layout/activity_konfirmasi.xml
@@ -73,6 +73,7 @@
                     android:text="A 102"
                     android:textColor="@color/colorBlack"
                     android:textSize="25dp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_konfirmasi" />
@@ -147,7 +148,7 @@
                     android:layout_marginLeft="100dp"
                     android:layout_marginTop="20dp"
                     android:singleLine="true"
-                    android:text="Dono"
+                    android:text="Group A - Dono"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -158,7 +159,7 @@
                     android:id="@+id/tv_counter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="27dp"
                     android:text="Counter"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
@@ -175,7 +176,7 @@
                     android:singleLine="true"
                     android:text="1200"
                     android:textColor="@color/colorBlack"
-                    android:textSize="20sp"
+                    android:textSize="28sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_counter"
                     app:layout_constraintTop_toBottomOf="@id/tv_nama_operator" />
@@ -199,7 +200,7 @@
                     android:layout_marginLeft="100dp"
                     android:layout_marginTop="20dp"
                     android:singleLine="true"
-                    android:text="Tidak ada catatan"
+                    android:text="-"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
