--- a/Samitex/app/src/main/res/layout/activity_scan_data.xml
+++ b/Samitex/app/src/main/res/layout/activity_scan_data.xml
@@ -72,19 +72,10 @@
 
                     <EditText
                         android:id="@+id/et_tanggal"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.9"
                         android:singleLine="true"
                         android:textColor="@color/colorGrey" />
-
-                    <ImageView
-                        android:id="@+id/img_scanner"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="0.1"
-                        android:src="@drawable/ic_qr_code" />
 
                 </LinearLayout>
 
@@ -96,20 +87,20 @@
                     app:layout_constraintTop_toBottomOf="@+id/layout_tanggal">
 
                     <TextView
-                        android:id="@+id/tv_no_mesin"
+                        android:id="@+id/tv_shift"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="No.Mesin"
+                        android:text="Shift"
                         android:textColor="@color/colorBlack"
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/tv_shift"
+                        android:id="@+id/tv_group"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.35"
-                        android:text="Shift"
+                        android:layout_weight="1"
+                        android:text="Group"
                         android:textColor="@color/colorBlack"
                         android:textSize="20sp" />
 
@@ -123,14 +114,14 @@
                     app:layout_constraintTop_toBottomOf="@id/layout_mesin">
 
                     <EditText
-                        android:id="@+id/et_no_mesin"
+                        android:id="@+id/et_shift"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/et_shift"
+                        android:id="@+id/et_group"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -156,11 +147,11 @@
                         app:layout_constraintTop_toBottomOf="@id/layout_et" />
 
                     <TextView
-                        android:id="@+id/tv_Group"
+                        android:id="@+id/tv_Mesin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
-                        android:text="Group"
+                        android:layout_weight="1"
+                        android:text="No.Mesin"
                         android:textColor="@color/colorBlack"
                         android:textSize="20sp" />
                 </LinearLayout>
@@ -175,15 +166,23 @@
                         android:id="@+id/et_operator"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="1.3"
                         android:singleLine="true" />
 
                     <EditText
-                        android:id="@+id/et_group"
+                        android:id="@+id/et_mesin"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:singleLine="true" />
+
+                    <ImageView
+                        android:id="@+id/img_scanner"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="0.1"
+                        android:src="@drawable/ic_qr_code" />
 
                 </LinearLayout>
 
@@ -191,7 +190,7 @@
                     android:id="@+id/tv_jumlah_couter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Jumlah Counter"
+                    android:text="Counter"
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
                     app:layout_constraintTop_toBottomOf="@id/layout_et_oprator" />
@@ -202,6 +201,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:singleLine="true"
+                    android:textSize="30sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_jumlah_couter" />
@@ -263,7 +263,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/btn_dashboard"
-                    android:layout_marginBottom="80dp"
+                    android:layout_marginBottom="70dp"
                     android:text="Konfirmasi"
                     android:textAllCaps="false"
                     android:textColor="@color/colorWhite"
