--- a/Samitex/app/src/main/res/layout/mesin_fragment.xml
+++ b/Samitex/app/src/main/res/layout/mesin_fragment.xml
@@ -8,12 +8,12 @@
         android:id="@+id/nomor_mesin"
         android:text="A 102"
         android:textSize="30sp"
+        android:textStyle="bold"
         android:textColor="@color/colorBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spinner"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TableLayout
         android:id="@+id/table_layout"
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="75"
+                android:text="75%"
                 android:textColor="#000" />
 
         </TableRow>
@@ -100,7 +100,7 @@
             android:id="@+id/table_row3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorAbuAbu"
             android:padding="10dp">
 
             <TextView
@@ -127,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="10"
+                android:text="10%"
                 android:textColor="#000" />
 
         </TableRow>
@@ -162,7 +162,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="60"
+                android:text="60%"
                 android:textColor="#000" />
 
         </TableRow>
@@ -170,7 +170,7 @@
             android:id="@+id/table_row5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorAbuAbu"
             android:padding="10dp">
 
             <TextView
@@ -197,7 +197,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="60"
+                android:text="60%"
                 android:textColor="#000" />
         </TableRow>
 
