--- a/Samitex/app/src/main/res/layout/tanggal_fragment.xml
+++ b/Samitex/app/src/main/res/layout/tanggal_fragment.xml
@@ -8,15 +8,13 @@
     <HorizontalScrollView
         android:id="@+id/scrol_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/spinner">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/btn_tanggal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/spinner">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/tgl_1"
@@ -289,7 +287,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="10"
+                android:text="70%"
                 android:textColor="#000" />
 
         </TableRow>
@@ -297,7 +295,7 @@
             android:id="@+id/table_row3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorAbuAbu"
             android:padding="10dp">
 
             <TextView
@@ -315,7 +313,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="Shift A"
+                android:text="S6"
                 android:textColor="#000" />
 
             <TextView
@@ -324,7 +322,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="Shift B"
+                android:text="67"
                 android:textColor="#000" />
 
             <TextView
@@ -333,7 +331,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="Shift C"
+                android:text="80"
                 android:textColor="#000" />
 
             <TextView
@@ -342,7 +340,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="75"
+                android:text="72%"
                 android:textColor="#000" />
 
         </TableRow>
@@ -368,7 +366,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="Shift A"
+                android:text="59"
                 android:textColor="#000" />
 
             <TextView
@@ -377,7 +375,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="Shift B"
+                android:text="68"
                 android:textColor="#000" />
 
             <TextView
@@ -386,7 +384,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="Shift C"
+                android:text="82"
                 android:textColor="#000" />
 
             <TextView
@@ -395,7 +393,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="80"
+                android:text="75%"
                 android:textColor="#000" />
 
         </TableRow>
@@ -403,7 +401,7 @@
             android:id="@+id/table_row5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorAbuAbu"
             android:padding="10dp">
 
             <TextView
@@ -421,7 +419,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="Shift A"
+                android:text="50"
                 android:textColor="#000" />
 
             <TextView
@@ -430,7 +428,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="Shift B"
+                android:text="54"
                 android:textColor="#000" />
 
             <TextView
@@ -439,7 +437,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="Shift C"
+                android:text="60"
                 android:textColor="#000" />
 
             <TextView
@@ -448,7 +446,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="serif"
-                android:text="110"
+                android:text="50%"
                 android:textColor="#000" />
 
         </TableRow>
