--- a/Samitex/app/src/main/res/menu/navigation_menu.xml
+++ b/Samitex/app/src/main/res/menu/navigation_menu.xml
@@ -4,14 +4,14 @@
     <item
         android:id="@+id/pengumuman"
         android:title="Pengumuman"
-        android:icon="@drawable/ic_megaphone"/>
+        android:icon="@drawable/megaphone"/>
     <item
         android:id="@+id/daftar_catatan"
         android:title="Daftar Catatan"
-        android:icon="@drawable/ic_poster"/>
+        android:icon="@drawable/ic_note"/>
     <item
         android:id="@+id/logout"
         android:title="Logout"
-        android:icon="@drawable/ic_exit"/>
+        android:icon="@drawable/signout"/>
 
 </menu>
