--- a/Samitex/app/src/main/res/layout/activity_konfirmasi.xml
+++ b/Samitex/app/src/main/res/layout/activity_konfirmasi.xml
@@ -175,6 +175,7 @@
                     android:layout_marginTop="20dp"
                     android:singleLine="true"
                     android:text="1200"
+                    android:textStyle="bold"
                     android:textColor="@color/colorBlack"
                     android:textSize="28sp"
                     app:layout_constraintEnd_toEndOf="parent"
